--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9.13"
-pandas = "2.0.1"
+pandas = "^1.3.3"
 scikit-learn = "1.2.2"
 
 [tool.poetry.dev-dependencies]
